--- a/css/principal.css
+++ b/css/principal.css
@@ -22,32 +22,26 @@ ul {
     list-style: none;
 }
 
-/*.contHome {
-    background-image: linear-gradient(rgba(225, 175, 4, 0.25), rgba(210, 150, 20, 0.25)), url(../img/fondo.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 360px;
-    margfin-top: 90px;
-}
-
-.contMain {
-    background-color: #4b34fa;
+.main {
     display: flex;
-    align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 90px);
-    margifn-top: 90px;
-    padfding: 40px 0;
+    align-items: center;
+  
+    margin-top: 80px;
+    min-height: calc(100vh - 80px);
     width: 100%;
-}*/
-
+  }
+  
+  .mainBloque {
+    flex-direction: column;
+  }
+  
 .contBanner {
     background-image: linear-gradient(rgba(215, 168, 7, 0.3), rgba(248, 205, 58, 0.3)), url(../img/fondo.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: calc(100dvh - 80px);
+    height: calc(100vh - 80px);
     width: 100%;
 }
 
@@ -65,7 +59,8 @@ ul {
     font-size: 3em;
     font-weight: 300;
     line-height: 175px;
-    max-width: 992px;
+    width: 992px;
+    text-align: center;
     text-shadow: 4px 4px 4px #000;
 }
 
@@ -110,7 +105,6 @@ ul {
 .pubDestacadas {
     display: flex;
     justify-content: space-around;
-    height: 320px;
     margin: 0 auto;
     width: 100%;
 }
@@ -125,7 +119,7 @@ ul {
 
 .card > img {
     border-radius: 5px;
-    width: inherit;
+    width: 100%;
 }
 
 .card h3, .card p {
@@ -165,4 +159,78 @@ ul {
 .piePagina .derechos > p {
     color: white;
     margin: 0 auto;
+}
+
+@media (max-width:768px){
+
+    .contBanner {
+        height: calc(100vh / 4 * 3);
+    }
+
+    .banner {
+        height: 30%;
+    }
+
+    .banner > h1 {
+        font-size: 2em;
+        line-height: 50px;
+        margin-top: 5%;
+        width: 100%;
+    }
+
+    .banner > h1 > span {
+        display: block;
+    }
+
+    .busqueda {
+        margin-top: 5%;
+        width: 90%;
+    }
+
+    .busqueda input, .busqueda button {
+        font-size: 0.9em;
+    }
+
+    .busqueda input {
+        width: 70%;
+    }
+    .busqueda button {
+        width: 30%;
+    }
+
+    .destacadosTitulo, .destacadosSub {
+        width: 90%;
+    }
+
+    .pubDestacadas {
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        width: 90%;
+    }
+
+    .card {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+
+    .card, .card img {
+        border-radius: 0;
+    }
+
+    .menuPie {
+        flex-direction: column;
+        font-size: 1.2em;
+        justify-content: center;
+        margin: 0 5%;
+    }
+
+    .menuPie ul {
+        margin-bottom: 10px;
+    }
+
+    .menuPie ul li {
+        margin-bottom: 10px;
+    }
+
 }
